--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,30 +1,24 @@
+<h1>Products</h1>
 <% @products.each do |product| %>
-  <div class="product-name">Name: <%= product.name %></div>
-  <div class="product-id">ID: <%= product.id %></div>
-  <div id="description<%= product.id %>">Description: <%= truncate product.description %></div>
-  <button class="js-more-info" data-id="<%= product.id %>">More Info</button><br><br>
+  <h3><%= product.name %></h3>
+  <div id="product-<%= product.id %>"><%= truncate(product.description) %></div>
+  <button class="js-more" data-id="<%= product.id %>">More Info</button>
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
-  $(function() {
-    $(".js-more-info").on('click', function(){
-      var id = $(this).data("id")
-      $.get(`/products/${id}/description`, function(data) {
-        // asdasd
-        console.log(data);
-        $(`#description${id}`).text(data)
-      })
-
-      $.get(`/products/${id}/inventory`, function(data) {
-        if (data === "true") {
-          $(`#description${id}`).text("Available")
-        } else {
-          $(`#description${id}`).after("<div id='inventory' style='color:red'>Sold Out</div>")
+$(function() {
+  $(".js-more").on("click", function() {
+    var id = $(this).data("id");
+    $.get("/products/" + id + "/description", function(description) {
+      $.get("/products/" + id + "/inventory", function(inventory) {
+        var inventoryText = "<strong>Available</strong>";
+        if(inventory === "false"){
+          inventoryText = "<strong>Sold Out</strong>";
         }
-      })
-    })
-  })
+        var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
+        $("#product-" + id).html(descriptionText);
+      });
+    });
+  });
+});
 </script>
-
-
-<%= link_to("Create New", new_product_path)%>
